# erdos

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yaml  .travis.yml  Cargo.toml  Dockerfile  Dockerfile_carla  README.md  build.rs  install.sh  install_dependencies.sh  requirements.txt  rust-toolchain  rust-toolchain.toml  setup.cfg  setup.py  setup_hooks.sh
erdos/: Cargo.toml  __init__.py  buffering_op.py  cluster.py  data_stream.py  data_streams.py  executor.py  graph.py  graph_handle.py  logging_op.py  message.py  op.py  op_handle.py  operators.py  progress_tracker.py  timestamp.py  utils.py
erdos/cluster/: cluster.py  dispatcher.py  node.py  ssh_dispatcher.py
erdos/local/: local_dispatcher.py  local_executor.py  local_node.py
erdos/ray/: buffer_actor.py  frequency_actor.py  notification_actor.py  ray_cluster.py  ray_executor.py  ray_input_data_stream.py  ray_node.py  ray_operator.py  ray_output_data_stream.py
erdos/ros/: ros_actionlib_op.py  ros_executor.py  ros_input_data_stream.py  ros_node.py  ros_output_data_stream.py  ros_publisher_op.py  ros_service_op.py  ros_subscriber_op.py
erdos/src/: configuration.rs  lib.rs
erdos/src/communication/: control_message_codec.rs  control_message_handler.rs  endpoints.rs  errors.rs  message_codec.rs  mod.rs  pusher.rs  receivers.rs  senders.rs  serializable.rs
erdos/src/dataflow/: connect.rs  context.rs  deadlines.rs  message.rs  mod.rs  operator.rs  state.rs
erdos/src/node/: client.rs  handles.rs  lattice.rs  leader.rs  mod.rs  node.rs  operator_event.rs  resources.rs  worker_node.rs
erdos/src/python/: py_timestamp.rs
erdos/src/scheduler/: channel_manager.rs  endpoints_manager.rs  mod.rs
erdos/tests/: inter_thread_test.rs  operator_test.rs  state_tests.rs  watermark_test.rs
examples/: Cargo.toml  car_racing.py  erdos_to_ros.rs  from_erdos.rs  full_pipeline.rs  leader_worker.rs  linq.rs  push_example.py  ros_to_erdos.rs  to_erdos.rs
examples/active_replication/: controller_operator.py  failure_operator.py  flux_buffer.py  flux_consumer_operator.py  flux_egress_operator.py  flux_ingress_operator.py  flux_producer_operator.py  flux_test.py  flux_utils.py  sink.py  source.py  test.py
examples/benchmarks/: Image.py  benchmark.py  ray_rpc_benchmark.py
examples/benchmarks/pylot/: camera_operator.py  depth_camera_operator.py  detection_operator.py  fusion_operator.py  generic_load_operator.py  gps_operator.py  imu_operator.py  intersection_det_operator.py  lane_det_operator.py  lidar_operator.py  mapping_operator.py  mission_planner_operator.py  motion_planner_operator.py  prediction_operator.py  pylot.py  pylot_log_analyzer.py  pylot_utils.py  radar_operator.py  segmentation_operator.py  slam_operator.py  tracker_operator.py  traffic_light_det_operator.py  traffic_sign_det_operator.py
examples/checkpoint/: checkpoint_test.py  controller_operator.py  failure_operator.py  sink.py  source.py
examples/pylot/: Dockerfile_carla_Ubuntu_16.04  Dockerfile_carla_Ubuntu_18.04  README.md  agent_operator.py  agent_utils.py  benchmark.py  camera_replay_operator.py  carla_operator.py  carla_to_image_operator.py  config.py  control_operator.py  data_gatherer.py  detection_center_net_operator.py  detection_eval_ground_operator.py  detection_operator.py  detection_operator_yolo.py  detection_utils.py  erdos_agent_operator.py  fusion_operator.py  fusion_verification_operator.py  ground_agent_operator.py  lidar_visualizer_op.py  lidar_visualizer_operator.py  messages.py  object_tracker_operator.py  obstacle_accuracy_operator.py  operator_creator.py  pylot.py  pylot_utils.py  requirements.txt  segmentation_dla_operator.py  segmentation_drn_operator.py  segmentation_eval_ground_operator.py  segmentation_eval_operator.py  segmentation_operator.py  segmentation_utils.py  segmented_video_operator.py  tracker_crt_operator.py  tracker_cv2_operator.py  tracker_da_siam_rpn.py  (+4 more)
examples/pylot/configs/: data_gatherer.conf  detection.conf  detection_eval_increments_20ms_frcnn_resnet101.conf  detection_eval_increments_20ms_ssd_mobilenet.conf  detection_eval_increments_20ms_ssd_resnet50.conf  detection_mAP_eval_frcnn_resnet101.conf  detection_mAP_eval_ssd_mobilenet.conf  detection_mAP_eval_ssd_resnet50.conf  detection_server.conf  detection_timely_mAP_eval_increments_20ms_frcnn_resnet101.conf  detection_timely_mAP_eval_increments_20ms_ssd_mobilenet.conf  detection_timely_mAP_eval_increments_20ms_ssd_resnet50.conf  erdos_agent.conf  erdos_e2e.conf  erdos_e2e.config  erdos_e2e_no_vis.conf  erdos_e2e_no_vis.config  fusion.conf  ground_agent_e2e_benchmark.conf  ground_detection_eval.conf  (+12 more)
examples/synchronizer/: input_operator.py  synchronizer.py  synchronizer_best_data_operator.py  synchronizer_data_within_limit_operator.py  synchronizer_last_data_operator.py
examples/the-feeling-of-success/: Dockerfile  gel_sight_op.py  goto_xyz_op.py  init_robot_op.py  insert_block_op.py  insert_table_op.py  mock_grasp_object_op.py  mock_gripper_op.py  mock_loc_obj_op.py  mock_predict_grip_op.py  mock_ungrasp_object_op.py  move_above_object_op.py  orientations.py  raise_object_op.py  random_position_op.py  rethink_electric_gripper.xacro  run_experiments.py  sawyer_base.gazebo.xacro  sawyer_world.launch
examples/upstream/: controller_operator.py  failure_operator.py  sink.py  source.py  upstream_operator.py  upstream_test.py  upstream_util.py
python/: Cargo.toml  MANIFEST.in  README.md  build-wheels.sh  out.gv  pyproject.toml  setup.py
python/doc/: requirements-doc.txt
python/erdos/: __init__.py  config.py  context.py  graph.py  message.py  operator.py  profile.py  streams.py  timestamp.py  utils.py
python/examples/: buffer.py  close_streams.py  experiment.py  fault_tolerance.py  ingest_extract.py  join_streams.py  linq.py  linq_api.py  loop.py  multimachine_pipeline.py  reset_example.py  simple_pipeline.py  test.py  utils.py  watermarks.py  window_map.py
python/src/: lib.rs  py_graph.rs  py_message.rs  py_timestamp.rs
python/tests/: erdos_to_ros_test.py  ros_to_erdos.py  ros_to_erdos_test.py
(+357 files in other folders)
