[package]
name = "erdos"
version = "0.2.0"
authors = ["The ERDOS Team"]
edition = "2018"
build = "build.rs"
default-run = "erdos"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/erdos/0.2.0/erdos/"
repository = "https://github.com/erdos-project/erdos"
description = """
ERDOS is a platform for developing self-driving cars and robotics applications.
"""
keywords = ["data-flow", "robotics", "autonomos", "driving"]

[dependencies]
abomonation = "0.7.3"
abomonation_derive = "0.5.0"
async-trait = "0.1.18"
bincode = "1.2.1"
bytes = "0.5.4"
byteorder = "1.0.0"
clap = "2.33.0"
futures = "0.3.1"
futures-util = "0.3.1"
lazy_static = "1.4.0"
petgraph = "0.5.0"
pyo3 = { version = "0.8.2", features = ["unsound-subclass"], optional = true }
rand = "0.3"
serde = { version = "1.0.99", features = ["derive"] }
slog = "2.4.2"
slog-term = "2.4.2"
tokio = { version = "0.2.11", features = ["sync", "tcp", "io-util", "rt-core", "rt-threaded", "time", "macros", "stream"] }
tokio-util = { version = "0.2.0", features = ["codec"] }
tokio-serde-bincode = "0.2"
uuid = { version = "0.7", features = ["v4", "v5", "serde"] }

[dev-dependencies]
criterion = "0.3.1"
criterion-macro = "0.3.1"
nix = "0.17.0"

[features]
default = []
python = ["pyo3"]  # Target python with 'cargo build --features=python

[lib]
crate-type=["rlib", "cdylib"]   # Required for python

[[bench]]
name = "latency"

[[bin]]
name = "experiment-throughput-driver"
path = "experiments/throughput_driver.rs"

[[bin]]
name = "experiment-throughput"
path = "experiments/throughput.rs"
