[package]
name = "erdos"
version = "0.3.1"
authors = ["The ERDOS Team"]
edition = "2018"
default-run = "erdos"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/crate/erdos/"
repository = "https://github.com/erdos-project/erdos"
description = """
ERDOS is a platform for developing self-driving cars and robotics applications.
"""
keywords = ["data-flow", "robotics", "autonomos", "driving"]

[dependencies]
abomonation = "0.7.3"
abomonation_derive = "0.5.0"
async-trait = "0.1.18"
bincode = "1.3.1"
bytes = "1.0.0"
byteorder = "1.3.4"
clap = "2.33.0"
futures = "0.3.5"
futures-delay-queue = "0.4.2"
futures-intrusive = "0.4"  # Required for futures-delay-queue
futures-util = "0.3.5"
petgraph = "0.5.0"
pyo3 = { version = "0.14.3", optional = true }
rand = "0.3"
rosrust = { version = "0.9", optional = true }
rosrust_msg = { version = "0.1", optional = true }
serde = { version = "1.0.115", features = ["derive"] }
tracing = "0.1.29"
tracing-appender = "0.2.0"
tracing-subscriber = "0.3.1"
tokio = { version = "1.8.1", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
tokio-serde-bincode = "0.2.1"
uuid = { version = "0.7", features = ["v4", "v5", "serde"] }

[build-dependencies]
slog = "2.4.2"
slog-term = "2.4.2"

[dev-dependencies]
criterion = "0.3.3"
criterion-macro = "0.3.3"
nix = "0.17.0"

[features]
default = []
python = ["pyo3"]  # Target python with 'cargo build --features=python
ros = ["rosrust", "rosrust_msg"]  # Add ROS operator support with 'cargo build --features=ros

[lib]
crate-type=["rlib", "cdylib"]   # Required for python

[[bench]]
name = "latency"
