[package]
name = "python"
version = "0.3.1"
edition = "2018"

[dependencies]
erdos = { path = "../erdos" }
tracing = "0.1.29"

[dependencies.pyo3]
version = "0.15.1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[lib]
name = "erdos_python"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "erdos.internal"
