[build-system]
requires = ["maturin>=0.12,<0.13", "numpy>=1.19.0"]
build-backend = "maturin"

[project]
name = "erdos"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]